Polishing Folia implementation